# cortex

./: .editorconfig  .gitignore  .mcp.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXAMPLES.md  PROGRESS.md  QUICKSTART.md  README.md  SECURITY.md  install.sh  pyproject.toml  setup-mcp.sh  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
completions/: cortex.bash  cortex.zsh
cortex_memory/: __init__.py  config.py  embeddings.py  git_utils.py  graph.py  impact.py  indexer.py  jsonl.py  knowledge.py  patterns.py  schemas.py  server.py  sqlite_store.py  vector_store.py
demo-scripts/: 01-quickstart.sh  README.md
templates/: post-commit.sh
templates/prompts/: extract-decisions.txt  summarize-commit.txt  summarize-session.txt
templates/system/: cortex-daemon.plist  cortex-daemon.service
tests/: cortex.bats  integration.bats  snapshot.bats  test-helper.bash
tests_python/: conftest.py  test_config.py  test_embeddings.py  test_git_utils.py  test_graph.py  test_indexer.py  test_jsonl.py  test_schemas.py  test_server.py  test_sqlite_store.py  test_vector_store.py
