[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cortex-memory"
version = "0.2.0"
description = "Persistent memory for AI coding assistants — MCP server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
cortex-memory = "cortex_memory.server:main"

[tool.pytest.ini_options]
testpaths = ["tests_python"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["cortex_memory"]
